compiler-ast/src/main/java/org/daida/lisp/compiler/ast/parse/JvmLispParser.java
// Generated from E:/workspace/jvm-lisp/compiler-ast/src/main/resources\JvmLispParser.g4 by ANTLR 4.10.1
package org.daida.lisp.compiler.ast.parse;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JvmLispParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BRACK_L=1, BRACK_R=2, DOT=3, PAREN_L=4, PAREN_R=5, FALSE=6, IMPORT=7, 
		PACKAGE=8, PRIVATE=9, PROTECTED=10, PUBLIC=11, SUPER=12, THIS=13, TRUE=14, 
		VAR=15, DEF_CLASS=16, DEF_ENUM=17, DEF_FIELD=18, DEF_INTERFACE=19, DEF_METHOD=20, 
		DEF_NEW=21, DEF_RECORD=22, ACCESS=23, ABSTRACT=24, EXTENDS=25, FINAL=26, 
		IMPLEMENTS=27, INITIAL=28, RETURN_TYPE=29, STATIC=30, TYPE=31, Id=32, 
		Qname=33, Char=34, Digits=35, Numeric=36, String=37, WS=38;
	public static final int
		RULE_compilationUnit = 0, RULE_classDecl = 1, RULE_ctorDecl = 2, RULE_fieldDecl = 3, 
		RULE_importDecl = 4, RULE_methodDecl = 5, RULE_packageDecl = 6, RULE_paramDecl = 7, 
		RULE_typeDecl = 8, RULE_varDecl = 9, RULE_classMember = 10, RULE_ctorSlot = 11, 
		RULE_fieldSlot = 12, RULE_methodSlot = 13, RULE_paramSlot = 14, RULE_typeSlot = 15, 
		RULE_varSlot = 16, RULE_abstractModifier = 17, RULE_finalModifier = 18, 
		RULE_privateModifier = 19, RULE_protectedModifier = 20, RULE_publicModifier = 21, 
		RULE_staticModifier = 22, RULE_retType = 23, RULE_typeExtends = 24, RULE_typeImpl = 25, 
		RULE_varInit = 26, RULE_varType = 27, RULE_stmt = 28, RULE_expr = 29, 
		RULE_valueLiteral = 30, RULE_charLiteral = 31, RULE_digitsLiteral = 32, 
		RULE_falseLiteral = 33, RULE_numericLiteral = 34, RULE_stringLiteral = 35, 
		RULE_trueLiteral = 36, RULE_id = 37, RULE_qname = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "classDecl", "ctorDecl", "fieldDecl", "importDecl", 
			"methodDecl", "packageDecl", "paramDecl", "typeDecl", "varDecl", "classMember", 
			"ctorSlot", "fieldSlot", "methodSlot", "paramSlot", "typeSlot", "varSlot", 
			"abstractModifier", "finalModifier", "privateModifier", "protectedModifier", 
			"publicModifier", "staticModifier", "retType", "typeExtends", "typeImpl", 
			"varInit", "varType", "stmt", "expr", "valueLiteral", "charLiteral", 
			"digitsLiteral", "falseLiteral", "numericLiteral", "stringLiteral", "trueLiteral", 
			"id", "qname"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'.'", "'('", "')'", "'false'", "'import'", "'package'", 
			"'private'", "'protected'", "'public'", "'super'", "'this'", "'true'", 
			"'var'", "'def-class'", "'def-enum'", "'def-field'", "'def-interface'", 
			"'def-method'", "'def-new'", "'def-record'", "':access'", "':abstract'", 
			"':extends'", "':final'", "':implements'", "':initial'", "':return-type'", 
			"':static'", "':type'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BRACK_L", "BRACK_R", "DOT", "PAREN_L", "PAREN_R", "FALSE", "IMPORT", 
			"PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "SUPER", "THIS", "TRUE", 
			"VAR", "DEF_CLASS", "DEF_ENUM", "DEF_FIELD", "DEF_INTERFACE", "DEF_METHOD", 
			"DEF_NEW", "DEF_RECORD", "ACCESS", "ABSTRACT", "EXTENDS", "FINAL", "IMPLEMENTS", 
			"INITIAL", "RETURN_TYPE", "STATIC", "TYPE", "Id", "Qname", "Char", "Digits", 
			"Numeric", "String", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JvmLispParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JvmLispParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(JvmLispParser.PAREN_L, 0); }
		public TerminalNode PAREN_R() { return getToken(JvmLispParser.PAREN_R, 0); }
		public TerminalNode EOF() { return getToken(JvmLispParser.EOF, 0); }
		public PackageDeclContext packageDecl() {
			return getRuleContext(PackageDeclContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(PAREN_L);
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(79);
				packageDecl();
				}
				break;
			}
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(82);
				importDecl();
				}
				break;
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAREN_L) {
				{
				{
				setState(85);
				typeDecl();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(PAREN_R);
			setState(92);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public List<TerminalNode> PAREN_L() { return getTokens(JvmLispParser.PAREN_L); }
		public TerminalNode PAREN_L(int i) {
			return getToken(JvmLispParser.PAREN_L, i);
		}
		public TerminalNode DEF_CLASS() { return getToken(JvmLispParser.DEF_CLASS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<TerminalNode> PAREN_R() { return getTokens(JvmLispParser.PAREN_R); }
		public TerminalNode PAREN_R(int i) {
			return getToken(JvmLispParser.PAREN_R, i);
		}
		public List<TypeSlotContext> typeSlot() {
			return getRuleContexts(TypeSlotContext.class);
		}
		public TypeSlotContext typeSlot(int i) {
			return getRuleContext(TypeSlotContext.class,i);
		}
		public List<ClassMemberContext> classMember() {
			return getRuleContexts(ClassMemberContext.class);
		}
		public ClassMemberContext classMember(int i) {
			return getRuleContext(ClassMemberContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(PAREN_L);
			setState(95);
			match(DEF_CLASS);
			setState(96);
			id();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << ABSTRACT) | (1L << EXTENDS) | (1L << FINAL) | (1L << IMPLEMENTS) | (1L << STATIC))) != 0)) {
				{
				{
				setState(97);
				typeSlot();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(PAREN_L);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAREN_L) {
				{
				{
				setState(104);
				classMember();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(PAREN_R);
			setState(111);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtorDeclContext extends ParserRuleContext {
		public List<TerminalNode> PAREN_L() { return getTokens(JvmLispParser.PAREN_L); }
		public TerminalNode PAREN_L(int i) {
			return getToken(JvmLispParser.PAREN_L, i);
		}
		public TerminalNode DEF_NEW() { return getToken(JvmLispParser.DEF_NEW, 0); }
		public List<TerminalNode> PAREN_R() { return getTokens(JvmLispParser.PAREN_R); }
		public TerminalNode PAREN_R(int i) {
			return getToken(JvmLispParser.PAREN_R, i);
		}
		public List<CtorSlotContext> ctorSlot() {
			return getRuleContexts(CtorSlotContext.class);
		}
		public CtorSlotContext ctorSlot(int i) {
			return getRuleContext(CtorSlotContext.class,i);
		}
		public List<ParamDeclContext> paramDecl() {
			return getRuleContexts(ParamDeclContext.class);
		}
		public ParamDeclContext paramDecl(int i) {
			return getRuleContext(ParamDeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public CtorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctorDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitCtorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtorDeclContext ctorDecl() throws RecognitionException {
		CtorDeclContext _localctx = new CtorDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ctorDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(PAREN_L);
			setState(114);
			match(DEF_NEW);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC))) != 0)) {
				{
				{
				setState(115);
				ctorSlot();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(PAREN_L);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAREN_L) {
				{
				{
				setState(122);
				paramDecl();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(PAREN_R);
			setState(129);
			match(PAREN_L);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAREN_L) | (1L << FALSE) | (1L << TRUE) | (1L << Char) | (1L << Digits) | (1L << Numeric) | (1L << String))) != 0)) {
				{
				{
				setState(130);
				stmt();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(PAREN_R);
			setState(137);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDeclContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(JvmLispParser.PAREN_L, 0); }
		public TerminalNode DEF_FIELD() { return getToken(JvmLispParser.DEF_FIELD, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode PAREN_R() { return getToken(JvmLispParser.PAREN_R, 0); }
		public List<FieldSlotContext> fieldSlot() {
			return getRuleContexts(FieldSlotContext.class);
		}
		public FieldSlotContext fieldSlot(int i) {
			return getRuleContext(FieldSlotContext.class,i);
		}
		public FieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitFieldDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDeclContext fieldDecl() throws RecognitionException {
		FieldDeclContext _localctx = new FieldDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(PAREN_L);
			setState(140);
			match(DEF_FIELD);
			setState(141);
			id();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << FINAL) | (1L << INITIAL) | (1L << STATIC) | (1L << TYPE))) != 0)) {
				{
				{
				setState(142);
				fieldSlot();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(JvmLispParser.PAREN_L, 0); }
		public TerminalNode IMPORT() { return getToken(JvmLispParser.IMPORT, 0); }
		public TerminalNode PAREN_R() { return getToken(JvmLispParser.PAREN_R, 0); }
		public List<QnameContext> qname() {
			return getRuleContexts(QnameContext.class);
		}
		public QnameContext qname(int i) {
			return getRuleContext(QnameContext.class,i);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitImportDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(PAREN_L);
			setState(151);
			match(IMPORT);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Qname) {
				{
				{
				setState(152);
				qname();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public List<TerminalNode> PAREN_L() { return getTokens(JvmLispParser.PAREN_L); }
		public TerminalNode PAREN_L(int i) {
			return getToken(JvmLispParser.PAREN_L, i);
		}
		public TerminalNode DEF_METHOD() { return getToken(JvmLispParser.DEF_METHOD, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<TerminalNode> PAREN_R() { return getTokens(JvmLispParser.PAREN_R); }
		public TerminalNode PAREN_R(int i) {
			return getToken(JvmLispParser.PAREN_R, i);
		}
		public List<MethodSlotContext> methodSlot() {
			return getRuleContexts(MethodSlotContext.class);
		}
		public MethodSlotContext methodSlot(int i) {
			return getRuleContext(MethodSlotContext.class,i);
		}
		public List<ParamDeclContext> paramDecl() {
			return getRuleContexts(ParamDeclContext.class);
		}
		public ParamDeclContext paramDecl(int i) {
			return getRuleContext(ParamDeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(PAREN_L);
			setState(161);
			match(DEF_METHOD);
			setState(162);
			id();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << ABSTRACT) | (1L << FINAL) | (1L << RETURN_TYPE) | (1L << STATIC))) != 0)) {
				{
				{
				setState(163);
				methodSlot();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(PAREN_L);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAREN_L) {
				{
				{
				setState(170);
				paramDecl();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			match(PAREN_R);
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PAREN_L) {
				{
				setState(177);
				match(PAREN_L);
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAREN_L) | (1L << FALSE) | (1L << TRUE) | (1L << Char) | (1L << Digits) | (1L << Numeric) | (1L << String))) != 0)) {
					{
					{
					setState(178);
					stmt();
					}
					}
					setState(183);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(184);
				match(PAREN_R);
				}
			}

			setState(187);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(JvmLispParser.PAREN_L, 0); }
		public TerminalNode PACKAGE() { return getToken(JvmLispParser.PACKAGE, 0); }
		public QnameContext qname() {
			return getRuleContext(QnameContext.class,0);
		}
		public TerminalNode PAREN_R() { return getToken(JvmLispParser.PAREN_R, 0); }
		public PackageDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitPackageDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclContext packageDecl() throws RecognitionException {
		PackageDeclContext _localctx = new PackageDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_packageDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(PAREN_L);
			setState(190);
			match(PACKAGE);
			setState(191);
			qname();
			setState(192);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamDeclContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(JvmLispParser.PAREN_L, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode PAREN_R() { return getToken(JvmLispParser.PAREN_R, 0); }
		public List<ParamSlotContext> paramSlot() {
			return getRuleContexts(ParamSlotContext.class);
		}
		public ParamSlotContext paramSlot(int i) {
			return getRuleContext(ParamSlotContext.class,i);
		}
		public ParamDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitParamDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamDeclContext paramDecl() throws RecognitionException {
		ParamDeclContext _localctx = new ParamDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(PAREN_L);
			setState(195);
			id();
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FINAL || _la==TYPE) {
				{
				{
				setState(196);
				paramSlot();
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(202);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			classDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(JvmLispParser.PAREN_L, 0); }
		public TerminalNode VAR() { return getToken(JvmLispParser.VAR, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode PAREN_R() { return getToken(JvmLispParser.PAREN_R, 0); }
		public List<VarSlotContext> varSlot() {
			return getRuleContexts(VarSlotContext.class);
		}
		public VarSlotContext varSlot(int i) {
			return getRuleContext(VarSlotContext.class,i);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(PAREN_L);
			setState(207);
			match(VAR);
			setState(208);
			id();
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FINAL) | (1L << INITIAL) | (1L << TYPE))) != 0)) {
				{
				{
				setState(209);
				varSlot();
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(215);
			match(PAREN_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassMemberContext extends ParserRuleContext {
		public CtorDeclContext ctorDecl() {
			return getRuleContext(CtorDeclContext.class,0);
		}
		public FieldDeclContext fieldDecl() {
			return getRuleContext(FieldDeclContext.class,0);
		}
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmLispParserVisitor ) return ((JvmLispParserVisitor<? extends T>)visitor).visitClassMember(this);
			else return visitor.visitChildren(this);
		}
	}
